[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/TileSets/Template Tileset/block64x64.bmp" type="Texture" id=1]
[ext_resource path="res://Gameplay Scripts/OneWayPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 71, 54 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 16 )

[node name="TopBlock" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 32 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="BodyBlock" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="collideBlock" type="CollisionShape2D" parent="BodyBlock"]
visible = false
shape = SubResource( 1 )
one_way_collision = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
